--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "instrusion-detection-frontend",
+  "name": "IDS-ML-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^5.10.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-api": "cd ../backend && python -m flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-api": "cd ../backend && python -m flask test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
