--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^5.10.1",
+    "@blueprintjs/table": "^5.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
